src/test/ui/async-await/issue-61076.stderr
error[E0277]: the `?` operator can only be applied to values that implement `std::ops::Try`
  --> $DIR/issue-61076.rs:38:5
   |
LL |     foo()?;
   |     ^^^^^^
   |     |
   |     the `?` operator cannot be applied to type `impl std::future::Future`
   |     help: consider using `.await` here: `foo().await?`
   |
   = help: the trait `std::ops::Try` is not implemented for `impl std::future::Future`
   = note: required by `std::ops::Try::into_result`

error[E0277]: the `?` operator can only be applied to values that implement `std::ops::Try`
  --> $DIR/issue-61076.rs:52:5
   |
LL |     t?;
   |     ^^
   |     |
   |     the `?` operator cannot be applied to type `T`
   |     help: consider using `.await` here: `t.await?`
   |
   = help: the trait `std::ops::Try` is not implemented for `T`
   = note: required by `std::ops::Try::into_result`

error[E0609]: no field `0` on type `impl std::future::Future`
  --> $DIR/issue-61076.rs:54:26
   |
LL |     let _: i32 = tuple().0;
   |                  --------^
   |                  |
   |                  help: consider await before field access: `tuple().await.0`

error[E0609]: no field `a` on type `impl std::future::Future`
  --> $DIR/issue-61076.rs:56:28
   |
LL |     let _: i32 = struct_().a;
   |                  ----------^
   |                  |
   |                  help: consider await before field access: `struct_().await.a`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0609.
For more information about an error, try `rustc --explain E0277`.
